--- a/homework/ArduinoSensorReceiver/res/menu/discover_menu.xml
+++ b/homework/ArduinoSensorReceiver/res/menu/discover_menu.xml
@@ -1,5 +1,4 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.example.bluetoothecho.MainActivity" >
 
@@ -7,6 +6,6 @@
         android:id="@+id/action_scan"
         android:orderInCategory="100"
         android:title="@string/action_scan"
-        app:showAsAction="always"/>
+        android:showAsAction="always"/>
 
 </menu>
